[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://sprites/background-day.png" type="Texture" id=2]
[ext_resource path="res://scripts/bird.gd" type="Script" id=3]
[ext_resource path="res://sprites/yellowbird-downflap.png" type="Texture" id=4]
[ext_resource path="res://sprites/yellowbird-midflap.png" type="Texture" id=5]
[ext_resource path="res://sprites/yellowbird-upflap.png" type="Texture" id=6]
[ext_resource path="res://sound/wing.wav" type="AudioStream" id=7]
[ext_resource path="res://prefabs/pipe.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/spawn.gd" type="Script" id=9]
[ext_resource path="res://sound/point.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/die.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "background"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("background_anim/background_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1.90735e-06 ), Vector2( -921.6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background_anim/background_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 921.6, -1.90735e-06 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 50.0
height = 40.0

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( -40, 1450 )
b = Vector2( 940, 1450 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/font.ttf"

[sub_resource type="DynamicFont" id=6]
size = 130
font_data = SubResource( 5 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="background_anim" type="AnimationPlayer" parent="."]
autoplay = "background"
anims/background = SubResource( 1 )

[node name="background_1" type="Sprite" parent="background_anim"]
position = Vector2( 0, -1.90735e-06 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 2 )
centered = false

[node name="background_2" type="Sprite" parent="background_anim"]
position = Vector2( 921.6, -1.90735e-06 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 2 )
centered = false

[node name="bird" type="RigidBody2D" parent="."]
position = Vector2( 310, 660 )
z_index = 10
mode = 2
gravity_scale = 18.0
script = ExtResource( 3 )

[node name="anim_sprite" type="AnimatedSprite" parent="bird"]
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
playing = true

[node name="collision" type="CollisionShape2D" parent="bird"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="snd_wing" type="AudioStreamPlayer" parent="bird"]
stream = ExtResource( 7 )

[node name="greater_limit" type="StaticBody2D" parent="."]

[node name="greater_collision" type="CollisionShape2D" parent="greater_limit"]
position = Vector2( -10, -1540 )
shape = SubResource( 4 )

[node name="lesser_limit" type="StaticBody2D" parent="."]

[node name="lesser_collision" type="CollisionShape2D" parent="lesser_limit"]
shape = SubResource( 4 )

[node name="pipes" type="Node2D" parent="."]
position = Vector2( 1000, 800 )
z_index = 1

[node name="pipe" parent="pipes" instance=ExtResource( 8 )]
speed = -350

[node name="spawn" type="Position2D" parent="pipes"]
script = ExtResource( 9 )

[node name="spawn_timer" type="Timer" parent="pipes/spawn"]
wait_time = 3.0
autostart = true

[node name="replay_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="interface" type="Node2D" parent="."]
z_index = 3

[node name="hud" type="Control" parent="interface"]
margin_right = 900.0
margin_bottom = 1600.0

[node name="score" type="Label" parent="interface/hud"]
margin_top = 130.0
margin_right = 900.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="sound" type="Node" parent="."]

[node name="score" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource( 10 )

[node name="hit" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource( 11 )
[connection signal="timeout" from="pipes/spawn/spawn_timer" to="pipes/spawn" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="replay_timer" to="." method="_on_replay_timer_timeout"]
